@@ -23,6 +23,9 @@ import static org.apache.gravitino.file.Fileset.LOCATION_NAME_UNKNOWN;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import java.util.Map;
+import java.util.Set;
+import org.apache.gravitino.connector.HiddenPropertyMaskUtils;
+import org.apache.gravitino.connector.MaskAndOmitKeys;
 import org.apache.gravitino.file.Fileset;
 import org.apache.gravitino.meta.AuditInfo;
 import org.apache.gravitino.meta.FilesetEntity;
@@ -70,7 +73,7 @@ public class TestEntityCombinedFileset {
     Assertions.assertEquals(properties, entityCombinedFileset.properties());
   }
 
-  /** Test that properties() method correctly filters hidden properties. */
+  /** Test that properties() method masks hidden properties. */
   @Test
   void testPropertiesWithHiddenProperties() {
     Fileset fileset = Mockito.mock(Fileset.class);
@@ -79,18 +82,18 @@ public class TestEntityCombinedFileset {
     Mockito.when(fileset.properties()).thenReturn(properties);
 
     EntityCombinedFileset entityCombinedFileset =
-        EntityCombinedFileset.of(fileset).withHiddenProperties(ImmutableSet.of("hiddenProp"));
+        EntityCombinedFileset.of(fileset)
+            .withHiddenProperties(MaskAndOmitKeys.of(ImmutableSet.of("hiddenProp"), Set.of()));
 
     Map<String, String> result = entityCombinedFileset.properties();
 
-    // Should only contain non-hidden properties
-    Assertions.assertEquals(2, result.size());
+    Assertions.assertEquals(3, result.size());
     Assertions.assertEquals("valueA", result.get("propA"));
     Assertions.assertEquals("valueB", result.get("propB"));
-    Assertions.assertNull(result.get("hiddenProp"));
+    Assertions.assertEquals(HiddenPropertyMaskUtils.MASKED_VALUE, result.get("hiddenProp"));
   }
 
-  /** Test that withHiddenProperties() method handles null input correctly. */
+  /** Null classification must not NPE and must leave properties unchanged. */
   @Test
   void testWithHiddenPropertiesNull() {
     Fileset fileset = Mockito.mock(Fileset.class);
